# study_bud

./: apiexample.html  pyproject.toml
base/: forms.py  models.py  urls.py  views.py
base/api/: urls.py  views.py
base/migrations/: 0001_initial.py  0002_topic_room_host_message_room_topic.py  0003_alter_room_options_room_participants.py  0004_alter_message_options.py
base/templates/base/: activity.html  activity_component.html  delete.html  delete_old.html  feed_component.html  home.html  home_old.html  login_register.html  login_register_old.html  profile.html  profile_old.html  room.html  room_form.html  room_form_old.html  room_old.html  topics.html  topics_component.html  update-user.html
studybud/: settings.py  urls.py
templates/: main.html  navbar.html
