[tool.poetry]
name = "study-bud"
version = "0.1.0"
description = ""
authors = ["Azis <azissalizov@gmail.com>"]
readme = "README.md"
packages = [{include = "study_bud"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
